--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ set(CMAKE_SHARED_LINKER_FLAGS "-L/usr/lib -Wl,-O1,--sort-common,--as-needed,-z,r
 include(FindPkgConfig)
 pkg_check_modules(CURLPP REQUIRED curlpp)
 
-add_executable(tuitube main.cpp)
+add_executable(tuitube src/main.cpp)
 target_link_libraries(tuitube ${CURLPP_LDFLAGS})
