added cmake install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 # cmake_minimum_required(VERSION <specify CMake version here>)
 project(tuitube)
 
+include(GNUInstallDirs)
+
+cmake_minimum_required(VERSION 3.17)
 set(CMAKE_CXX_STANDARD 20)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(CMAKE_SHARED_LINKER_FLAGS "-L/usr/lib -Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now -lcurl -lcurlpp")
 
 include(FindPkgConfig)
@@ -10,3 +13,5 @@ pkg_check_modules(CURLPP REQUIRED curlpp)
 
 add_executable(tuitube src/main.cpp)
 target_link_libraries(tuitube ${CURLPP_LDFLAGS})
+
+install(TARGETS ${PROJECT_NAME})
